--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,12 +18,13 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": "src",
   },
   "include": [
     "src"
   ],
-    "exclude": [
+  "exclude": [
     "./node_modules/**/*"
   ]
 }
