--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/typography": "^0.5.2",
+    "@tanstack/react-table": "^8.10.7",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "apexcharts": "^3.44.2",
     "axios": "^1.3.2",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^27.4.2",
@@ -51,9 +53,11 @@
     "prompts": "^2.4.2",
     "pusher-js": "^8.0.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-modal": "^3.15.1",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.4.4",
