--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@headlessui/react": "^1.6.0",
     "@heroicons/react": "^2.0.3",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
+    "@rainbow-me/rainbowkit": "^1.3.0",
     "@svgr/webpack": "^5.5.0",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.0",
@@ -73,6 +74,8 @@
     "terser-webpack-plugin": "^5.2.5",
     "tls": "^0.0.1",
     "urql": "^3.0.3",
+    "viem": "^1.19.11",
+    "wagmi": "~1.4.7",
     "web-vitals": "^2.1.4",
     "webpack": "^5.64.4",
     "webpack-dev-server": "^4.6.0",
