--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
+    "@vitejs/plugin-basic-ssl": "^1.0.2",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.5",
     "browserify-zlib": "^0.2.0",
